--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "dotenv": "4.0.0",
     "email-validator": "^2.0.3",
     "express": "^4.17.1",
+    "jsonwebtoken": "^8.5.1",
     "jwt-decode": "^2.2.0",
     "jwt-simple": "^0.5.1",
     "moment-timezone": "^0.5.16",
@@ -36,6 +37,7 @@
     "multer": "^1.4.3",
     "passport": "0.4.0",
     "passport-jwt": "4.0.0",
+    "query-string": "^7.0.1",
     "react": "17.0.2",
     "react-bootstrap": "2.0.1",
     "react-dom": "17.0.2",
@@ -50,13 +52,15 @@
     "reflect-metadata": "0.1.13",
     "routing-controllers": "0.9.0",
     "typedi": "0.8.0",
-    "underscore": "1.13.1"
+    "underscore": "1.13.1",
+    "ws": "^8.4.0"
   },
   "devDependencies": {
     "@types/chai": "4.0.3",
     "@types/mocha": "^5.2.7",
     "@types/node": "14.17.0",
     "@types/react": "17.0.2",
+    "@types/ws": "^8.2.2",
     "chai": "^4.1.1",
     "concurrently": "3.5.0",
     "css-loader": "^3.2.0",
